# MyFfmpegHightLevel

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/rulerbug/mycpp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/rulerbug/mycpp/: App.java  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/rulerbug/mycpp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
myldemo/: CMakeLists.txt  build.gradle
myldemo/src/androidTest/java/com/rulerbug/myldemo/: ExampleInstrumentedTest.kt
myldemo/src/main/: AndroidManifest.xml
myldemo/src/main/cpp/: AndroidLog.h  ShAudio.cpp  ShAudio.h  ShCallBack.cpp  ShCallBack.h  ShFfmpeg.cpp  ShFfmpeg.h  ShQueue.cpp  ShQueue.h  ShStatue.cpp  ShStatue.h  native-lib.cpp
myldemo/src/main/java/com/rulerbug/myldemo/: Demo.kt
myldemo/src/test/java/com/rulerbug/myldemo/: ExampleUnitTest.kt
